camera_ws/log/build_2023-05-31_20-40-45/cameraraspy/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ubuntu/Documents/shalpy/camera_ws/install/cameraraspy/lib/python3.10/site-packages/cameraraspy/rec_image.py", line 390
    main()2 = int(res[0][2][0]), int(res[0][2][1])
          ^
SyntaxError: invalid syntax

